# CANExplorer

./: .env  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  justfile  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml
can_explorer/: __init__.py  __main__.py  __version__.py
can_explorer/database/: dbc.py
can_explorer/gui/: about_dialog.py  base_worker.py  can_raw_viewer.py  can_worker.py  main_window.py  new_connection_dialog.py
can_explorer/gui/qt/: about_dialog.ui  main_window.ui  new_connection_dialog.ui  stylesheet.qss
can_explorer/transport/: base_protocol.py  can_connection.py  can_message.py  isocan.py  isotp.py
can_explorer/transport/canopen/: canopen.py
can_explorer/transport/isocan/: isocan.py
can_explorer/transport/isotp/: addressing.py  errors.py  isotp.py  old_transport.py  pdu.py
can_explorer/transport/j1939/: addressing.py  j1939.py  pdu.py
can_explorer/util/: canutils.py  gui.py  validator.py  version.py
can_server/: __init__.py  __main__.py
can_server/cli/: cli.py
can_server/core/: heart.py  server.py
docs/: full_doc.adoc  todo.md
docs/chapters/: references.adoc
tests/unit/: conftest.py  test_demo.py
tests/unit/transport/: test_j1939.py
