[metadata]
name = CANExplorer
version = attr: my_package.__version__
author = AKJ7
author_email = akj123429@gmail.com
description = A CAN-Analyse tool for all platform
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = CAN, can, canbus, analyse, explorer, decode, encode, dbc, gui
license = BSD-3-Clause
classifiers =
    Framework :: PyQt6
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    requests
    importlib-metadata; python_version<"3.10"

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    executable-name = my_package.module:function

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[tool.pytest]
minversion = 6.0
addopts =
testpaths =
    tests/unit
    test/integration

[tool:black]
line-length = 120
include = \.pyi?$
exclude = \.git
          | \.hg
          | \.mypy_cache
          | \.tox
          | \.venv
          | _build
          | buck-out
          | build
          | dist
skip-string-normalization = True

[tools:pylint]
disable = C0111, C0114, C0115, C0116б, W1203, missing-module-docstring, missing-class-docstring, disable=missing-function-docstring

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    my_package.tests*
